--- a/homepage/package.json
+++ b/homepage/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vlabs-app",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -18,7 +19,7 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "yatharth-super-lemon": "^1.5.8"
+    "yatharth-super-lemon": "^1.5.9"
   },
   "scripts": {
     "start": "react-scripts start",
