--- a/homepage/package.json
+++ b/homepage/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@npmcli/fs": "^3.1.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +21,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.2",
+    "svgo": "^3.3.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yatharth-super-lemon": "^1.5.9"
   },
@@ -44,8 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^7.0.3"
   }
 }
