upgrade script action to https, make changes to enable PWA UI

--- a/homepage/public/manifest.json
+++ b/homepage/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Virtual Labs - Virtual Experiments Panel",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
