--- a/homepage/package.json
+++ b/homepage/package.json
@@ -28,7 +28,7 @@
     "yatharth-super-lemon": "^1.5.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
