--- a/homepage/package.json
+++ b/homepage/package.json
@@ -4,8 +4,12 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@npmcli/fs": "^3.1.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@testing-library/jest-dom": "^5.16.5",
