--- a/.github/workflows/deployment-release.yml
+++ b/.github/workflows/deployment-release.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync ./homepage/build/* s3://app.vlabs.ac.in --delete
+          aws s3 sync ./homepage/build s3://app.vlabs.ac.in --delete
 
       - name: invalidate cloudfront cache
         run: |
